@startuml

title __DOMAIN's Class Diagram__\n

  namespace cn.shui.offer {
    namespace domain {
      class cn.shui.offer.domain.ListNode {
          + val : int
          + ListNode()
          + ListNode()
          ~ ListNode()
      }
    }
  }
  

  namespace cn.shui.offer {
    namespace domain {
      class cn.shui.offer.domain.Node {
          + val : int
          + Node()
      }
    }
  }
  

  namespace cn.shui.offer {
    namespace domain {
      class cn.shui.offer.domain.TreeNode {
          + val : int
          + TreeNode()
      }
    }
  }
  

  cn.shui.offer.domain.ListNode o-- cn.shui.offer.domain.ListNode : next
  cn.shui.offer.domain.Node o-- cn.shui.offer.domain.Node : next
  cn.shui.offer.domain.Node o-- cn.shui.offer.domain.Node : random
  cn.shui.offer.domain.TreeNode o-- cn.shui.offer.domain.TreeNode : left
  cn.shui.offer.domain.TreeNode o-- cn.shui.offer.domain.TreeNode : right


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
